[gd_scene load_steps=2 format=3 uid="uid://hql1silsjnmi"]

[ext_resource type="Script" uid="uid://lv0ncehu7buu" path="res://scripts/ui/SocialDNAPanel.gd" id="1_qtrw8"]

[node name="SocialDNAPanel" type="Panel"]
script = ExtResource("1_qtrw8")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 399.0
offset_bottom = 600.0

[node name="StatsLabel" type="Label" parent="VBox"]
layout_mode = 2

[node name="TestButtons" type="VBoxContainer" parent="VBox"]
layout_mode = 2
